[gd_scene load_steps=18 format=3]

[ext_resource type="Theme" uid="uid://cj85gpjxuegm5" path="res://resource/theme/SkillEditor.tres" id="1_bqjws"]
[ext_resource type="Script" path="res://Scripts/UI/Gui.gd" id="1_kipj0"]
[ext_resource type="PackedScene" uid="uid://h2oiwixjg01n" path="res://Sceane/Skills/view_skill.tscn" id="2_ifcs3"]
[ext_resource type="Script" path="res://Scripts/skill/ui/SetSkills.gd" id="3_jxamk"]
[ext_resource type="Script" path="res://Scripts/UI/SkillEditorUI.gd" id="7_bo8mw"]
[ext_resource type="Script" path="res://Scripts/skill/ui/Type.gd" id="7_kpwqs"]
[ext_resource type="Theme" uid="uid://c3wd7igkasrby" path="res://resource/theme/SkillInventory.tres" id="8_rmq52"]
[ext_resource type="Script" path="res://Scripts/skill/Inventory/SkillInventory.gd" id="9_dd5co"]
[ext_resource type="Script" path="res://Scripts/skill/Inventory/Slot.gd" id="9_espd6"]
[ext_resource type="Texture2D" uid="uid://dkco8braq8ve4" path="res://Assets/GUI/buttons/BotaoA.png" id="10_vds2p"]
[ext_resource type="PackedScene" uid="uid://cx3p2yicy1tgd" path="res://Sceane/Skills/Skill_Item.tscn" id="11_fndb8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_qqs78"]

[sub_resource type="World3D" id="World3D_0uihi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_legb7"]
texture = ExtResource("10_vds2p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x6ii2"]
texture = ExtResource("10_vds2p")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_r1mtv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_favi6"]
texture = SubResource("CompressedTexture2D_r1mtv")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kipj0")
metadata/_edit_lock_ = true

[node name="SkillInventory" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_rmq52")
script = ExtResource("9_dd5co")

[node name="Background" type="Panel" parent="SkillInventory"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_right = 795.0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="SkillInventory/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = 75.0
offset_right = -47.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="SkillInventory/Background/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Slot" type="Panel" parent="SkillInventory/Background/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_espd6")
get_inv = NodePath("../../../..")

[node name="Skill_item" parent="SkillInventory/Background/ScrollContainer/GridContainer/Slot" instance=ExtResource("11_fndb8")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
get_inv = NodePath("..")

[node name="Close" type="Button" parent="SkillInventory"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.039
offset_left = 795.0
offset_right = 886.288
offset_bottom = 37.728
text = "X"

[node name="SkillEditor" type="Control" parent="." node_paths=PackedStringArray("view", "viewPort", "TypeContainer")]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 209.0
offset_top = 88.0
offset_right = 209.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme = ExtResource("1_bqjws")
script = ExtResource("7_bo8mw")
view = NodePath("SubViewport/ViewSkill")
viewPort = NodePath("SubViewport")
TypeContainer = NodePath("Adds/SetSkills/Type")

[node name="Panel" type="Panel" parent="SkillEditor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -837.0
offset_top = -345.0
offset_right = 605.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillImage" type="TextureRect" parent="SkillEditor"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_top = 60.0
offset_right = 951.0
offset_bottom = 1045.0
grow_horizontal = 2
scale = Vector2(0.57, 0.57)
texture = SubResource("ViewportTexture_qqs78")

[node name="Close" type="Button" parent="SkillEditor"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.039
offset_left = 1047.5
offset_top = -21.25
offset_right = 1138.79
offset_bottom = 16.478
text = "X"

[node name="Save" type="Button" parent="SkillEditor"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.5
offset_top = -379.25
offset_right = -92.4999
offset_bottom = -300.25
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="SubViewport" type="SubViewport" parent="SkillEditor"]
world_3d = SubResource("World3D_0uihi")
transparent_bg = true

[node name="ViewSkill" parent="SkillEditor/SubViewport" instance=ExtResource("2_ifcs3")]

[node name="Adds" type="ScrollContainer" parent="SkillEditor"]
layout_mode = 0
offset_left = -189.0
offset_top = 54.0
offset_right = 237.0
offset_bottom = 620.0
follow_focus = true
horizontal_scroll_mode = 0
metadata/_edit_group_ = true

[node name="SetSkills" type="VBoxContainer" parent="SkillEditor/Adds"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_jxamk")

[node name="BTypeClass" type="Button" parent="SkillEditor/Adds/SetSkills"]
texture_filter = 1
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_legb7")
theme_override_styles/hover = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/focus = SubResource("StyleBoxTexture_x6ii2")
text = "TypeClass:"

[node name="TypeSkillUser" type="VBoxContainer" parent="SkillEditor/Adds/SetSkills"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="magic" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "magic"

[node name="sword" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "sword"

[node name="trap" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "trap"

[node name="bow" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "bow"

[node name="punch" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
visible = false
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "punch"

[node name="shield" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "shield"

[node name="rune" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "rune"

[node name="axe" type="Button" parent="SkillEditor/Adds/SetSkills/TypeSkillUser"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "axe"

[node name="BElements" type="Button" parent="SkillEditor/Adds/SetSkills"]
texture_filter = 1
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_legb7")
theme_override_styles/hover = SubResource("StyleBoxTexture_legb7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_legb7")
theme_override_styles/disabled = SubResource("StyleBoxTexture_legb7")
theme_override_styles/focus = SubResource("StyleBoxTexture_legb7")
text = "Elements:"

[node name="Element" type="VBoxContainer" parent="SkillEditor/Adds/SetSkills"]
visible = false
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 3

[node name="fire" type="Button" parent="SkillEditor/Adds/SetSkills/Element"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "FIre"

[node name="air" type="Button" parent="SkillEditor/Adds/SetSkills/Element"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Air"

[node name="water" type="Button" parent="SkillEditor/Adds/SetSkills/Element"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "water"

[node name="dirt" type="Button" parent="SkillEditor/Adds/SetSkills/Element"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "dirt"

[node name="BBuff" type="Button" parent="SkillEditor/Adds/SetSkills"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/hover = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/focus = SubResource("StyleBoxTexture_x6ii2")
text = "Buffs:"

[node name="Buff" type="VBoxContainer" parent="SkillEditor/Adds/SetSkills/BBuff"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -13.0
offset_right = 209.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="BDebuff" type="Button" parent="SkillEditor/Adds/SetSkills"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/hover = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_favi6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/focus = SubResource("StyleBoxTexture_x6ii2")
text = "Debuffs:
"

[node name="Debuff" type="VBoxContainer" parent="SkillEditor/Adds/SetSkills/BDebuff"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -16.0
offset_right = 209.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Btype" type="Button" parent="SkillEditor/Adds/SetSkills"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/hover = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_x6ii2")
theme_override_styles/focus = SubResource("StyleBoxTexture_x6ii2")
text = "TypeSkill:"

[node name="Type" type="VBoxContainer" parent="SkillEditor/Adds/SetSkills" node_paths=PackedStringArray("SkillEditor")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_kpwqs")
SkillEditor = NodePath("../../..")

[node name="Editor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -263.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Editor"

[node name="Inv" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -263.0
offset_top = 31.0
offset_bottom = 62.0
grow_horizontal = 0
text = "Inv"

[connection signal="pressed" from="SkillInventory/Close" to="SkillInventory" method="_on_close_pressed"]
[connection signal="pressed" from="SkillEditor/Close" to="SkillEditor" method="_on_close_pressed"]
[connection signal="pressed" from="SkillEditor/Save" to="SkillEditor" method="_on_save_pressed"]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/BTypeClass" to="SkillEditor/Adds/SetSkills" method="_on_b_type_class_pressed"]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/magic" to="SkillEditor" method="_on_magic_pressed"]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/sword" to="SkillEditor" method="_on_melee_pressed" binds= ["sword_Slash"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/trap" to="SkillEditor" method="_on_melee_pressed" binds= ["trap_mouseTrap"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/bow" to="SkillEditor" method="_on_melee_pressed" binds= ["bow_OneArrow"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/shield" to="SkillEditor" method="_on_melee_pressed" binds= ["shield_block"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/rune" to="SkillEditor" method="_on_melee_pressed" binds= ["rune_addForce"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/TypeSkillUser/axe" to="SkillEditor" method="_on_melee_pressed" binds= ["axe_Slash"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/BElements" to="SkillEditor/Adds/SetSkills" method="_on_b_elements_pressed"]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/Element/fire" to="SkillEditor" method="_on_elements_pressed" binds= ["fire"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/Element/air" to="SkillEditor" method="_on_elements_pressed" binds= ["air"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/Element/water" to="SkillEditor" method="_on_elements_pressed" binds= ["water"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/Element/dirt" to="SkillEditor" method="_on_elements_pressed" binds= ["dirt"]]
[connection signal="pressed" from="SkillEditor/Adds/SetSkills/Btype" to="SkillEditor/Adds/SetSkills" method="_on_btype_pressed"]
[connection signal="pressed" from="Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="Inv" to="." method="_on_inv_pressed"]
